feat: сделать раздел faq

--- a/index.html
+++ b/index.html
@@ -130,6 +130,120 @@
           </div>
         </div>
       </section>
+      <section class="faq">
+        <h2 class="section-title faq__title">FAQ</h2>
+        <ul class="faq__list">
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Вы даёте гарантию на ваши услуги?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Да, на все наши услуги распространяется гарантия выполнения. Мы – официальная компания и дорожим
+                нашей репутацией. По всем вопросам вы можете написать помощнику Николая или в поддержку на сайте.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Зачем нужно накручивать комментарии?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Комментарии – показатель уже существующего взаимодействия
+                с вашей социальной сетью. Именно с целью увеличения данного показателя мы и рекомендуем накручивать комментарии. Важно! Комментарии по тебе – добавляют лояльность и доверие к вам,
+                как к бренду.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Что такое восстановление?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Восстановление – это дополнительная гарантия, что ваши лайки,
+                подписчики и просмотры никуда не исчезнут. В случае, если количество показателей уменьшится
+                из-за алгоритмов социальных сетей – наш алгоритм отследит изменения и сразу же вернёт показатели.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Зачем нужно накручивать просмотры?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Основная цель накрутки просмотров- показатель потенциальному
+                покупателю или подписчику, что ваш аккаунт уже интересен другим людям. Психология человека такова –
+                он обратит внимание сам и привлечёт внимание друга – отправить ему ссылку и сделать репост.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Как происходит продвижение в социальных сетях?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Сразу после регистрации на нашем сайте (все данные строго
+                конфиденциальны) вам на почту приходит приветственное письмо. Сразу после вы можете выбрать нужный
+                вам вид накрутки и заказать услугу.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Как у вас реализуется технология живых комментариев?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Никакого секрета нет – после выгрузки заказа в систему, избранные
+                исполнители – живые люди, изучают профиль и фотографии.
+                На основе того, что изображено на фотографии – пишут комментарии. Все комментарии полностью относятся к теме вашего поста
+                или фотографии.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Насколько ваш сервис конфиденциален?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Сервис SMMPrime несёт полную ответственность за данные наших
+                пользователей и гарантирует, что никакие данные не попадут
+                в публичное пользование.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Как накрутка поможет моему заработку?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Все очень просто. Чем больше на вашей странице активность – тем более вашему
+                аккаунту доверяет целевой пользователь. Согласитесь, вы не станете покупать какой-то продукт в
+                магазине без покупателя. Точно такую же аналогию можно провести и с миром социальных сетей.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Не испортит ли накрутка статистику в инстаграме, тиктоке и других соц. сетях?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">Накрутка никаким образом не сказывается на статистике в Instargram,
+                Тикток и других соц. сетях. Нами не было зафиксировано ни одного случая снижения реальной
+                активности и других показателей после использования накрутки.</p>
+            </div>
+          </li>
+          <li class="faq__item">
+            <div class="faq__announce">
+              <p class="faq__subtitle">Почему на вашем сайте такие низкие цены?</p>
+              <button class="btn faq__button"></button>
+            </div>
+            <div class="faq__description faq__description_closed">
+              <p class="faq__text faq__text_closed">мы разработали уникальную систему, которая позволяет автоматизировать процесс увеличения показателей. Это экономит ресурсы, силы и позволяет снизить стоимость услуг по сравнению
+                с конкурентами.</p>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
     </footer>
