feat: добавить раздел know

--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
           </li>
         </ul>
       </section>
+      <section class="know">
+        <div class="know__container">
+          <h2 class="section-title know__title">Не знаешь, что выбрать?</h2>
+          <p class="text know__subtitle">Ответим в течение 30 минут</p>
+          <p class="know__text">Если ты не можешь выбрать, с чего начать, или есть какие-то вопросы — напиши нам
+            и мы поможем подобрать самую эффективную накрутку для твоей задачи</p>
+          <a class="btn btn_color_orange btn_size_large know__button">Написать менеджеру</a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
     </footer>
