feat: добавить алгоритм слайдера телефонов

--- a/index.html
+++ b/index.html
@@ -253,6 +253,16 @@
           <a class="btn btn_color_orange btn_size_large know__button">Написать менеджеру</a>
         </div>
       </section>
+      <section class="advantages">
+        <ul class="advantages__phone-list">
+          <li class="advantages__item advantages__item_type_phone advantages__item_active">
+            <div class="advantages__phone"></div>
+          </li>
+          <li class="advantages__item advantages__item_type_phone">
+            <div class="advantages__phone"></div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
     </footer>
