feat: добавить раздел с телефонами

--- a/index.html
+++ b/index.html
@@ -14,6 +14,63 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="advantages">
+        <div class="advantages__container">
+          <ul class="advantages__items-list">
+            <li class="advantages__text">Увеличивай доверие</li>
+            <li class="advantages__text">Становись популярнее</li>
+            <li class="advantages__text">Прокачивай имидж</li>
+            <li class="advantages__text">Продавай рекламу дороже</li>
+            <li class="advantages__text">Зарабатывай больше</li>
+          </ul>
+          <ul class="advantages__reviews">
+            <li class="advantages__review-container">
+              <figure class="advantages__review advantages__review_pos_left user-review">
+                <blockquote class="advantages__quote advantages__quote_pos_left user-review__quote">
+                  <p class="user-review__grade advantages__grade">Оценка: <span class="user-review__span-accent">4.8</span></p>
+                  <ul class="user-review__stars">
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_semi"></li>
+                  </ul>
+                  <p class="advantages-review__review user-review__review">Теперь даже в рекомендациях болтаюсь иногда</p>
+                </blockquote>
+                <img src="./images/orlova.png" alt="" class="user-review__avatar">
+                <figcaption class="advantages__name advantages__name_pos_left user-review__name">Анна Орлова, <a href="#" class="user-review__link">смотреть отзыв на сервисе</a></figcaption>
+              </figure>
+            </li>
+            <li class="advantages__review-container advantages__review-container_pos_right">
+              <figure class="advantages__review advantages__review_pos_right user-review">
+                <blockquote class="advantages__quote advantages__quote_pos_right user-review__quote">
+                  <p class="user-review__grade advantages__grade">Оценка: <span class="user-review__span-accent">4.8</span></p>
+                  <ul class="user-review__stars">
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_full"></li>
+                    <li class="user-review__star user-review__star_type_semi"></li>
+                  </ul>
+                  <p class="advantages-review__review  user-review__review">Продажи товаров стали потихонечку увеличиваться</p>
+                </blockquote>
+                <img src="./images/default-user-avatar.svg" alt="" class="user-review__avatar">
+                <figcaption class="advantages__name advantages__name_pos_right user-review__name">Марина Захарова, <a href="#" class="user-review__link">смотреть отзыв на сервисе</a></figcaption>
+              </figure>
+            </li>
+          </ul>
+          <ul class="advantages__phones">
+            <li class="advantages__item advantages__item_type_phone advantages__item_active">
+              <p class="advantages__phone-text">До:</p>
+              <img class="advantages__phone-image" src="./images/advantages-before.webp" alt="Аккаунт до накрутки">
+            </li>
+            <li class="advantages__item advantages__item_type_phone advantages__item_pos_left">
+              <p class="advantages__phone-text">После:</p>
+              <img class="advantages__phone-image" src="./images/advantages-after.webp" alt="Аккаунт после накрутки">
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="confidentiality">
         <h2 class="section-title confidentiality__title">100% конфиденциальность</h2>
         <p class="text confidentiality__text">Никто не узнает, что вы накручивали показатели у нас — это технически невозможно
@@ -252,16 +309,6 @@
             и мы поможем подобрать самую эффективную накрутку для твоей задачи</p>
           <a class="btn btn_color_orange btn_size_large know__button">Написать менеджеру</a>
         </div>
-      </section>
-      <section class="advantages">
-        <ul class="advantages__phone-list">
-          <li class="advantages__item advantages__item_type_phone advantages__item_active">
-            <div class="advantages__phone"></div>
-          </li>
-          <li class="advantages__item advantages__item_type_phone">
-            <div class="advantages__phone"></div>
-          </li>
-        </ul>
       </section>
     </main>
     <footer class="footer">
