feat: разработать блок payment

--- a/index.html
+++ b/index.html
@@ -14,8 +14,78 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="payment">
+        <div class="payment__container">
+          <h2 class="section-title payment__title">Оплачивай любым способом</h2>
+          <p class="text payment__text">Даже с иностранных карт или с юр. лица</p>
+          <div class="payment__list-container">
+            <ul class="payment__list">
+              <li class="payment__item">
+                <img src="./images/payments/iomoney-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/mir-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/qiwi-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/visa-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/mastercard-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/wm-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/icons/image 7.png" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/icons/image 8.png" alt="" class="payment__image">
+              </li>
+            </ul>
+            <ul aria-hidden="true" class="payment__list">
+              <li class="payment__item">
+                <img src="./images/payments/iomoney-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/mir-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/qiwi-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/visa-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/mastercard-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/payments/wm-logo.svg" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/icons/image 7.png" alt="" class="payment__image">
+              </li>
+              <li class="payment__item">
+                <img src="./images/icons/image 8.png" alt="" class="payment__image">
+              </li>
+            </ul>
+          </div>
+          <div class="payment__guarantee">
+            <h3 class="payment__guarantee-title">Гарантируем возврат</h3>
+            <p class="payment__guarantee-text"> Вернём 100% оплаты, если заказ не выполнится или произойдёт ошибка</p>
+          </div>
+        </div>
+      </section>
+      <section class="performe">
+        <h2 class="section-title performe__title">Выбирай пол, страну и качество исполнителей</h2>
+        <p class="text performe__text">чтобы не получилось так, что на ваш салон красоты подписаны только суровые мужчины 😏</p>
+        <img src="./images/performe-img.webp" alt="" class="performe__image">
+      </section>
       <section class="advantages">
         <div class="advantages__container">
+          <a href="#" class="advantages__button btn btn_color_orange btn_size_large">Зарегистрироваться</a>
           <ul class="advantages__items-list">
             <li class="advantages__text">Увеличивай доверие</li>
             <li class="advantages__text">Становись популярнее</li>
