feat: разработать блок optimization

--- a/index.html
+++ b/index.html
@@ -14,6 +14,47 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="optimization">
+        <h2 class="section-title optimization__title">Низкие цены благодаря оптимизации</h2>
+        <div class="optimization__description">
+          <p class="text optimization__text">Мы оптимизировали систему накрутки, чтобы тратить меньше ресурсов.
+            Поэтому и цена ниже конкурентов</p>
+          <figure class="optimization__review user-review">
+              <blockquote class="optimization__quote user-review__quote">
+                <p class="user-review__grade optimization__grade">Оценка: <span class="user-review__span-accent">5.0</span></p>
+                <ul class="user-review__stars">
+                  <li class="user-review__star user-review__star_type_full"></li>
+                  <li class="user-review__star user-review__star_type_full"></li>
+                  <li class="user-review__star user-review__star_type_full"></li>
+                  <li class="user-review__star user-review__star_type_full"></li>
+                  <li class="user-review__star user-review__star_type_full"></li>
+                </ul>
+                <p class="optimization__name user-review__review">Дешевле, чем здесь, я не видела</p>
+              </blockquote>
+              <img src="./images/pankratova.png" alt="" class="user-review__avatar">
+              <figcaption class="user-review__name">Анна Панкратова, <a href="#" class="user-review__link">смотреть отзыв на сервисе</a></figcaption>
+          </figure>
+        </div>
+        <div class="optimization__culc choice__culc culc" id="second-culc">
+          <h3 class="optimization__subtitle">Выберите, какую соцсеть вам нужно раскрутить</h3>
+          <ul class="optimization__list choice__list culc__list"></ul>
+          <div class="choice__services choice__services_hided culc__service-container">
+            <h3 class="optimization__subtitle choice__subtitle">Выберите тип услуги:</h3>
+            <ul class="optimization__sublist  choice__sublist culc__sublist"></ul>
+          </div>
+          <div class="optimization__description choice__description choice__description_hided">
+            <h3 class="optimization__choice-title  choice__subtitle">Стоимость:</h3>
+            <p class="optimization__proposal choice__proposal">
+              от
+              <span class="choice__cost culc__cost"></span>
+              руб. за
+              <span class="choice__amount culc__amount"></span>
+              шт.
+            </p>
+            <a href="" class="btn btn_color_orange btn_size_large choice__button">Ознакомиться с услугами</a>
+          </div>
+        </div>
+      </section>
       <section class="payment">
         <div class="payment__container">
           <h2 class="section-title payment__title">Оплачивай любым способом</h2>
