feat: разработать блок optimization

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
           </figure>
         </div>
         <div class="optimization__culc choice__culc culc" id="second-culc">
+          <div class="optimization__label">
+            <h3 class="optimization__label-title">Скидка 8% навсегда</h3>
+            <p class="optimization__label-text">при заказе от 10.000 рублей</p>
+          </div>
           <h3 class="optimization__subtitle">Выберите, какую соцсеть вам нужно раскрутить</h3>
           <ul class="optimization__list choice__list culc__list"></ul>
-          <div class="choice__services choice__services_hided culc__service-container">
+          <div class="optimization__services choice__services choice__services_hided culc__service-container">
             <h3 class="optimization__subtitle choice__subtitle">Выберите тип услуги:</h3>
             <ul class="optimization__sublist  choice__sublist culc__sublist"></ul>
           </div>
