feat: разработать блок cyrcle

--- a/index.html
+++ b/index.html
@@ -14,6 +14,77 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="cyrcle">
+        <h2 class="section-title cyrcle__title">У нас есть накрутка под любые бюджеты и цели</h2>
+        <p class="text cyrcle__text">В том числе и быстрая, если нужны мгновенные результаты</p>
+        <p class="text cyrcle__accent">Более 11 платформ</p>
+        <div class="cyrcle__figure">
+          <div class="cyrcle__socials">
+            <ul class="cyrcle__container">
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/tiktok-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/telegram-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/vk-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/youtube-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/twitter-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/ok-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="">
+                  <img class="cyrcle__image" src="./images/socials/spotify-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/internet-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/facebook-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="">
+                  <img class="cyrcle__image" src="./images/socials/soundcloud-icon.svg" alt="">
+                </a>
+              </li>
+              <li class="cyrcle__item">
+                <a href="#">
+                  <img class="cyrcle__image" src="./images/socials/instagram-icon.svg" alt="">
+                </a>
+              </li>
+            </ul>
+            <a href="#" class="cyrcle__button btn btn_color_orange">Смотреть все варианты</a>
+          </div>
+          <div class="cyrcle__service">
+            <h3 class="cyrcle__service-title">Внедрим услугу для вас</h3>
+            <p class="cyrcle__service-text">Не нашли необходимой услуги? Напишите нам и мы добавим её на сайт</p>
+          </div>
+        </div>
+      </section>
       <section class="optimization">
         <h2 class="section-title optimization__title">Низкие цены благодаря оптимизации</h2>
         <div class="optimization__description">
