feat: доработать блок cyrcle

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               </li>
             </ul>
             <a href="#" class="cyrcle__button btn btn_color_orange">Смотреть все варианты</a>
+            <div class="cyrcle__anim"></div>
           </div>
           <div class="cyrcle__service">
             <h3 class="cyrcle__service-title">Внедрим услугу для вас</h3>
