feat: разработать блок long-read

--- a/index.html
+++ b/index.html
@@ -14,6 +14,65 @@
     <header class="header">
     </header>
     <main class="content">
+      <article class="long-read">
+        <section class="long-read__section long-read__section_theme_dark long-read__section_pos_first">
+          <h2 class="section-title long-read__title">Обычная накрутка всегда заметна</h2>
+          <p class="text long-read__subtitle">и рекламодатели, и обычные пользователи давно научились её вычислять</p>
+        </section>
+        <section class="long-read__section long-read__section_theme_dark">
+          <img class="long-read__image" src="./images/long-read/long-read-first.png" alt="">
+          <p class="text long-read__text">Резкие скачки, большая цифра за короткое время — явные признаки накрутки</p>
+        </section>
+        <section class="long-read__section long-read__section_theme_dark">
+          <img class="long-read__image" src="./images/long-read/long-read-second.png" alt="">
+          <p class="text long-read__text">Много подписчиков, мало активности, комментарии не по теме, подписчики-боты</p>
+        </section>
+        <section class="long-read__section long-read__section_theme_dark long-read__section_size_l long-read__section_align_center long-read__section_type_curve">
+          <h3 class="long-read__description">Такому не доверяют. Накручивая обычным способом, вы теряете доверие и деньги</h3>
+        </section>
+        <section class="long-read__section long-read__section_pos_first">
+          <h2 class="section-title long-read__title">Мы же используем самый надежный метод накрутки</h2>
+          <p class="text long-read__subtitle">при котором процесс идет плавно, и всё выглядит натурально</p>
+        </section>
+        <section class="long-read__section">
+          <h4 class="long-read__accent-title">Постепенный рост показателей</h4>
+          <img class="long-read__image" src="./images/long-read/long-read-third.png" alt="">
+          <p class="text long-read__text">Накрутка не заметна, потому что прирост показателей происходит по интервалам, последовательно
+            и гармонично</p>
+        </section>
+        <section class="long-read__section">
+          <h4 class="long-read__accent-title">Живые комментарии по теме</h4>
+          <img class="long-read__image" src="./images/long-read/long-read-fourth.png" alt="">
+          <p class="text long-read__text">Живые комментарии по теме поста от реальных пользователей помогут увеличить доверие</p>
+        </section>
+        <section class="long-read__section">
+          <h4 class="long-read__accent-title">Аккаунты, неотличимые от реальных людей</h4>
+          <img class="long-read__image" src="./images/long-read/long-read-fifth.png" alt="">
+          <p class="text long-read__text">Они помогут сделать имидж аккаунту и увеличить доверие при небольших затратах</p>
+        </section>
+        <section class="long-read__section long-read__section_align_center">
+          <figure class="long-read__review user-review">
+            <blockquote class="long-read__quote user-review__quote">
+              <p class="user-review__grade long-read__grade">Оценка: <span class="user-review__span-accent">4.8</span></p>
+              <ul class="user-review__stars">
+                <li class="user-review__star user-review__star_type_full"></li>
+                <li class="user-review__star user-review__star_type_full"></li>
+                <li class="user-review__star user-review__star_type_full"></li>
+                <li class="user-review__star user-review__star_type_full"></li>
+                <li class="user-review__star user-review__star_type_semi"></li>
+              </ul>
+              <p class="user-review__review">Привели живых хороших подписчиков, многие
+                из которых оказались целевой аудиторией, это очень приятно!</p>
+            </blockquote>
+            <img src="./images/blar.png" alt="" class="user-review__avatar">
+            <figcaption class="long-read__name user-review__name">Kimmy Blar, <a href="#" class="user-review__link">смотреть отзыв на сервисе</a></figcaption>
+        </figure>
+        </section>
+        <section class="long-read__section long-read__section_size_l long-read__section_align_center">
+          <h2 class="section-title long-read__title">Заказать иммитацию органического роста через персонального менеджера</h2>
+          <a href="" class="btn btn_size_large btn_color_orange long-read__button">Написать менеджеру</a>
+        </section>
+      </article>
       <section class="cyrcle">
         <h2 class="section-title cyrcle__title">У нас есть накрутка под любые бюджеты и цели</h2>
         <p class="text cyrcle__text">В том числе и быстрая, если нужны мгновенные результаты</p>
@@ -78,7 +137,6 @@
               </li>
             </ul>
             <a href="#" class="cyrcle__button btn btn_color_orange">Смотреть все варианты</a>
-            <div class="cyrcle__anim"></div>
           </div>
           <div class="cyrcle__service">
             <h3 class="cyrcle__service-title">Внедрим услугу для вас</h3>
@@ -308,7 +366,7 @@
           </a>
         </div>
       </section>
-      <section class="about">
+      <article class="about">
         <div class="about__container">
           <h2 class="section-title about__title">Мы официальная компания</h2>
           <p class="text about__text">поэтому не боимся показывать нашу команду</p>
@@ -338,7 +396,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </article>
       <section class="recommend">
         <div class="recommend__container">
           <h2 class="section-title recommend__title">Рекомендуй нас и получай 6% с каждой оплаты</h2>
