feat: разработать блоки guarantee и reating

--- a/index.html
+++ b/index.html
@@ -14,6 +14,58 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="rating">
+        <ul class="rating__list">
+          <li class="rating__item">
+            <div class="rating__logo-container">
+              <img class="rating__logo" src="./images/grades/in-scale-logo.svg" alt="">
+            </div>
+            <h3 class="rating__grade">4,9</h3>
+            <p class="rating__count">73+ отзывов</p>
+          </li>
+          <li class="rating__item">
+            <div class="rating__logo-container">
+              <img class="rating__logo" src="./images/grades/affpartners-logo.svg" alt="">
+            </div>
+            <h3 class="rating__grade">4,9</h3>
+            <p class="rating__count">9+ отзывов</p>
+          </li>
+          <li class="rating__item">
+            <div class="rating__logo-container">
+              <img class="rating__logo" src="./images/grades/otzyv-marketing-logo.svg" alt="">
+            </div>
+            <h3 class="rating__grade">4,88</h3>
+            <p class="rating__count">81+ отзывов</p>
+          </li>
+          <li class="rating__item">
+            <div class="rating__logo-container">
+              <img class="rating__logo" src="./images/grades/eto-razvod-logo.svg" alt="">
+            </div>
+            <h3 class="rating__grade">4,6</h3>
+            <p class="rating__count">73+ отзывов</p>
+          </li>
+        </ul>
+      </section>
+      <section class="guarantee">
+        <div class="guarantee__section guarantee__section_size_l">
+          <h2 class="section-title guarantee__title">Зарегистрируйся, чтобы попробовать бесплатную накрутку</h2>
+          <ul class="guarantee__services">
+            <li class="guarantee__service">
+              <img class="guarantee__service-icon" src="./images/like-icon.svg" alt="">
+              <span class="text guarantee__service-name">30 лайков</span>
+            </li>
+            <li class="guarantee__service">
+              <img class="guarantee__service-icon" src="./images/user-icon.svg" alt="">
+              <span class="text guarantee__service-name">100 подписчиков</span>
+            </li>
+          </ul>
+          <a href="" class="btn btn_size_large btn_color_white guarantee__button">Попробовать бесплатно</a>
+        </div>
+        <div class="guarantee__section guarantee__section_size_s">
+          <h2 class="section-title guarantee__title">Гарантия результата</h2>
+          <p class="text guarantee__text">бесплатно докрутим, если кто-то отпишется в течение 30 дней</p>
+        </div>
+      </section>
       <article class="long-read">
         <section class="long-read__section long-read__section_theme_dark long-read__section_pos_first">
           <h2 class="section-title long-read__title">Обычная накрутка всегда заметна</h2>
