--- a/index.html
+++ b/index.html
@@ -14,6 +14,105 @@
     <header class="header">
     </header>
     <main class="content">
+      <section class="intro">
+        <div class="intro__container">
+          <div class="intro__section intro__section_type_primary">
+            <p class="intro__uppertitle">SMM-накрутка в социальных сетях</p>
+            <h1 class="section-title intro__title">
+              Имитируй органический рост в соцсетях
+              <div class="intro__socials-container">
+                <ul class="intro__socials">
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/facebook-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/instagram-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/internet-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/ok-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/soundcloud-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/spotify-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/telegram-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/tiktok-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/twitter-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/vk-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/whatsapp-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/youtube-icon.svg" alt="">
+                  </li>
+                </ul>
+                <ul aria-hidden="true" class="intro__socials">
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/facebook-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/instagram-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/internet-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/ok-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/soundcloud-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/spotify-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/telegram-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/tiktok-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/twitter-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/vk-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/whatsapp-icon.svg" alt="">
+                  </li>
+                  <li class="intro__social">
+                    <img class="intro__social-logo" src="./images/socials/youtube-icon.svg" alt="">
+                  </li>
+                </ul>
+              </div>
+            </h1>
+            <p class="text intro__text">С помощью умной комплексной накрутки*, которую не видно в статистике</p>
+            <p class="intro__text-accent"> *в услугах она отмечена значком 🌱</p>
+            <a class="btn btn_size_large btn_color_orange intro__button" href="">Попробовать бесплатно</a>
+          </div>
+          <div class="intro__section intro__section_type_secondary">
+            <div class="intro__image-container">
+              <p class="intro__cost">от 1₽ за 1000 результатов</p>
+              <img class="intro__image intro__image_type_primary" src="./images/intro-main.webp" alt="">
+              <img class="intro__image intro__image_type_secondary" src="./images/intro-secondary.webp" alt="">
+            </div>
+            <p class="intro__transp-text">Лайки, подписчики, просмотры и живые комментарии в Телеграм, ВК, Инстаграм*, ТикТок и Ютуб.</p>
+          </div>
+        </div>
+      </section>
       <section class="rating">
         <ul class="rating__list">
           <li class="rating__item">
