--- a/index.html
+++ b/index.html
@@ -12,6 +12,66 @@
   </head>
   <body class="root">
     <header class="header">
+      <a href="#" class="header__logo-container">
+        <span class="header__logo-title">SMM<span class="header__span-accent">PRIME</span></span>
+        <span class="header__logo-subtitle">с 2017 года помогаем продвигаться в соцсетях</span>
+      </a>
+      <button class="menu-burger">
+        <span class="menu-burger__item"></span>
+        <span class="menu-burger__item"></span>
+        <span class="menu-burger__item"></span>
+        <span class="menu-burger__item"></span>
+      </button>
+      <nav class="header__nav">
+        <ul class="header__links-list">
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link">Услуги</a>
+          </li>
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link">ТikTok</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Друзья</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+
+            </ul>
+          </li>
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link">Telegram</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Друзья</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+
+            </ul>
+          </li>
+          <li lang="en" class="header__link-container"><a href="#" class="header__link">YouTube</a></li>
+          <li lang="en" class="header__link-container"><a href="#" class="header__link">VK</a></li>
+          <li lang="en" class="header__link-container"><a href="#" class="header__link">Instagram*</a></li>
+        </ul>
+        <div class="header__socials-container">
+          <a href="" class="header__social">
+            <img class="header__social-logo" src="./images/socials/vk-icon.svg" alt="">
+          </a>
+          <a href="" class="header__social">
+            <img class="header__social-logo" src="./images/socials/telegram-icon.svg" alt="">
+          </a>
+        </div>
+        <div class="header__buttons-container">
+          <a href="#" class="btn btn_size_small btn_color_light-blue header__button">Регистрация</a>
+          <a href="#" class="btn btn_size_small btn_color_blue header__button">Вход</a>
+        </div>
+      </nav>
     </header>
     <main class="content">
       <section class="intro">
