feat: разработать блоки header

--- a/index.html
+++ b/index.html
@@ -12,23 +12,40 @@
   </head>
   <body class="root">
     <header class="header">
-      <a href="#" class="header__logo-container">
-        <span class="header__logo-title">SMM<span class="header__span-accent">PRIME</span></span>
-        <span class="header__logo-subtitle">с 2017 года помогаем продвигаться в соцсетях</span>
-      </a>
-      <button class="menu-burger">
-        <span class="menu-burger__item"></span>
-        <span class="menu-burger__item"></span>
-        <span class="menu-burger__item"></span>
-        <span class="menu-burger__item"></span>
-      </button>
+      <div class="header__mobile">
+        <a href="#" class="header__logo-container">
+          <span class="header__logo-title">SMM<span class="header__span-accent">PRIME</span></span>
+          <span class="header__logo-subtitle">с 2017 года помогаем продвигаться в соцсетях</span>
+        </a>
+        <button class="menu-burger">
+          <span class="menu-burger__item"></span>
+          <span class="menu-burger__item"></span>
+          <span class="menu-burger__item"></span>
+          <span class="menu-burger__item"></span>
+        </button>
+      </div>
       <nav class="header__nav">
         <ul class="header__links-list">
           <li lang="en" class="header__link-container">
             <a href="#" class="header__link">Услуги</a>
           </li>
           <li lang="en" class="header__link-container">
-            <a href="#" class="header__link">ТikTok</a>
+            <a href="#" class="header__link header__link_type_menu">ТikTok</a>
+            <ul class="header__links-sublist">
+              <a href="#" class="header__link">Главная</a>
+              <a href="#" class="header__link">Подписчики</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Друзья</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+              <a href="#" class="header__link">Комментарии</a>
+
+            </ul>
+          </li>
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link header__link_type_menu">Telegram</a>
             <ul class="header__links-sublist">
               <a href="#" class="header__link">Подписчики</a>
               <a href="#" class="header__link">Комментарии</a>
@@ -42,22 +59,14 @@
             </ul>
           </li>
           <li lang="en" class="header__link-container">
-            <a href="#" class="header__link">Telegram</a>
-            <ul class="header__links-sublist">
-              <a href="#" class="header__link">Подписчики</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Друзья</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-              <a href="#" class="header__link">Комментарии</a>
-
-            </ul>
+            <a href="#" class="header__link header__link_type_menu">YouTube</a>
           </li>
-          <li lang="en" class="header__link-container"><a href="#" class="header__link">YouTube</a></li>
-          <li lang="en" class="header__link-container"><a href="#" class="header__link">VK</a></li>
-          <li lang="en" class="header__link-container"><a href="#" class="header__link">Instagram*</a></li>
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link header__link_type_menu">VK</a>
+          </li>
+          <li lang="en" class="header__link-container">
+            <a href="#" class="header__link header__link_type_menu">Instagram*</a>
+          </li>
         </ul>
         <div class="header__socials-container">
           <a href="" class="header__social">
